...
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/insert_expiring_date_label"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/calendar_cv"
                app:layout_constraintTop_toBottomOf="@+id/adView" />

            <CalendarView
                android:id="@+id/calendar_cv"
                android:layout_width="0dp"
                android:layout_height="316dp"
...
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/calendar_cv"
                app:layout_constraintTop_toBottomOf="@+id/calendar_cv" />

            <eu.indiewalkabout.fridgemanager.core.util.EditTextWithClear
                android:id="@+id/foodName_et"
                android:layout_width="245dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_rect_light_grey_today"
                android:elevation="2dp"
                android:ems="10"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_rect_light_grey_today"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="2dp"
...
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/foodName_et"
                app:layout_constraintStart_toEndOf="@+id/foodName_et"
                app:srcCompat="@drawable/ic_mic_white_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/insert_food_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"

...
