...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/toolbar_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:text="title"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
...
                tools:layout_editor_absoluteY="18dp" />

        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/food_list_recycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_rect"
            android:backgroundTint="@color/light_grey_very_transparent"
            app:layout_constraintBottom_toTopOf="@id/food_list_fab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_list_toolbar" />


...
