...
    android:layout_margin="3dp"
    android:background="@drawable/lightgreen_background"
    android:padding="1dp">


    <CheckBox
        android:id="@+id/consumed_cb"
        style="@android:style/Widget.Material.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/brown"
        android:checked="false"
        android:fontFamily="@font/quicksand"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consumed_cb"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Food Name -->
        <TextView
            android:id="@+id/foodName_tv"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="2dp"
...
